cambios de todos los parrafos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Olivia Ros</title>
+    <title>ALmaris Rondon</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
@@ -73,12 +73,14 @@
     </header>
 
     <section id="Acerca-de-mi" class="container text-center my-5">
-      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+      <h2 class="display-3 fw-bold my-4">Conoceme</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        Me apasiona capturar la belleza de cada plato, resaltando sus colores y
+        texturas. Mi objetivo es transformar la gastronomía en arte visual,
+        permitiendo que cada imagen transmita la esencia del sabor. Trabajo con
+        restaurantes y chefs, creando fotos que no solo se ven bien, sino que
+        también cuentan una historia culinaria única.
       </p>
 
       <div class="row">
@@ -86,30 +88,34 @@
           <i class="fas fa-camera fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Soy una fotógrafa especializada en capturar la esencia de la
+            gastronomía. tengo habilidad para resaltar los colores y texturas de
+            los platos ha hecho que muchos restaurantes la busquen. Busco
+            transformar cada plato en una obra de arte, transmitiendo sabores y
+            sensaciones a través de imágenes.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="fas fa-bullhorn fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Crítica culinaria</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Me apasiona analizar los ingredientes, técnicas de cocina y
+            presentación de los platos, ofreciendo una perspectiva experta. En
+            mi opinion sobre algun restaurant pueden influir en la popularidad
+            del mismo y los comensales en sus decisiones gastronómicas,
+            destacando lo mejor y señalando áreas de mejora.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Viajar es mi pasión y compartir mis experiencias es mi misión.
+            Exploro destinos únicos, descubro culturas fascinantes y pruebo
+            comidas deliciosas. A través de mi blog, inspiro a otros a
+            aventurarse y vivir sus propios viajes. Ofrezco consejos prácticos,
+            itinerarios detallados y recomendaciones sinceras para que cada
+            viaje sea memorable y enriquecedor.
           </p>
         </div>
       </div>
@@ -130,10 +136,11 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                El asado en la Patagonia es una experiencia culinaria única. La
+                carne se cocina lentamente sobre brasas, adquiriendo un sabor
+                inigualable. Cada bocado refleja la tradición y el amor por la
+                cocina al aire libre. Los paisajes impresionantes y el aire
+                fresco complementan esta tradición.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -150,10 +157,11 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                Las papas del fin del mundo son un tesoro culinario de la
+                Patagonia. Cultivadas en suelos ricos y bajo climas extremos,
+                estas papas tienen un sabor único y una textura excepcional.
+                Cada variedad ofrece una experiencia gustativa diferente,
+                reflejando la biodiversidad de la región.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -170,10 +178,11 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Salmones de Alaska</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                Los salmones de Alaska son conocidos por su calidad excepcional
+                y sabor distintivo. Criados en aguas frías y puras, desarrollan
+                una textura firme y un sabor intenso. La pesca sostenible
+                asegura que estas poblaciones se mantengan saludables.
+                Disfrutados en diversas preparaciones culinarias.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -188,10 +197,12 @@
       <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
       <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
+        Si deseas saber más sobre mis servicios o tienes alguna pregunta, no
+        dudes en contactarme. Estoy disponible para ayudarte con tus necesidades
+        y brindarte la mejor asistencia posible. Puedes enviarme un mensaje a
+        través del formulario en mi sitio web o llamarme directamente. Espero
+        con interés poder colaborar contigo y ofrecerte una experiencia
+        excepcional.
       </p>
 
       <form>
