--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="assets/img/logo.png" class="img-fluid" />
-        </a>
+        <h1 class="nombre fs-3 texto navbar-nav nav-link">Almaris Rondon</h1>
         <button
           class="navbar-toggler"
           type="button"
@@ -63,10 +61,12 @@
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
           <div class="mb-5 pb-5">
-            <button class="btn btn-lg btn-outline-info text-light me-4">
+            <button class="btn btn-lg btn-outline-secondary text-light me-4">
               Trabajos
             </button>
-            <button class="btn btn-lg btn-info text-light">Contacto</button>
+            <button class="btn btn-lg btn-outline-secondary text-light">
+              Contacto
+            </button>
           </div>
         </div>
       </div>
@@ -142,7 +142,10 @@
                 cocina al aire libre. Los paisajes impresionantes y el aire
                 fresco complementan esta tradición.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button
+                type="button"
+                class="btn btn-outline-secondary text-light text-black"
+              >
                 Ver más
               </button>
             </div>
@@ -163,7 +166,10 @@
                 Cada variedad ofrece una experiencia gustativa diferente,
                 reflejando la biodiversidad de la región.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button
+                type="button"
+                class="btn btn-outline-secondary text-light text-black"
+              >
                 Ver más
               </button>
             </div>
@@ -184,7 +190,10 @@
                 asegura que estas poblaciones se mantengan saludables.
                 Disfrutados en diversas preparaciones culinarias.
               </p>
-              <button type="button" class="btn btn-outline-info">
+              <button
+                type="button"
+                class="btn btn-outline-secondary text-light text-black"
+              >
                 Ver más
               </button>
             </div>
@@ -225,7 +234,9 @@
         </div>
 
         <div class="my-3 text-end">
-          <button class="btn btn-info text-light">Enviar</button>
+          <button class="btn btn-outline-secondary text-light text-black">
+            Enviar
+          </button>
         </div>
       </form>
     </section>
