--- a/index.html
+++ b/index.html
@@ -121,10 +121,8 @@
       </div>
     </section>
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
-      <h2 class="display-4 fw-bold text-center text-light mb-3">
-        Mis trabajos
-      </h2>
+    <section id="Mis-trabajos" class="my-5 p-5 bg-warning">
+      <h2 class="display-4 fw-bold text-center mb-3">Mis trabajos</h2>
 
       <div class="row">
         <div class="col-12 col-sm-4 py-2">
@@ -241,8 +239,8 @@
       </form>
     </section>
 
-    <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="bg-secondary text-center text-light p-4">
+      <p class="mb-0">almarisrondon@gmail.com Telf. +56958451104</p>
     </footer>
 
     <script
