--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-warning">
+    <section id="Mis-trabajos" class="my-5 p-5">
       <h2 class="display-4 fw-bold text-center mb-3">Mis trabajos</h2>
 
       <div class="row">
